--- a/2/code/my_portfolio/index.html
+++ b/2/code/my_portfolio/index.html
@@ -9,13 +9,27 @@
   <body>
     <div>
       <header style="background-color: gold">
-        <a href="#home">Home</a>
+        <nav>
+          <ul>
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
 
-        <a href="#about">About</a>
+              <a href="#contact_me">Contact me</a>
+            </li>
+            <li>
+              <a href="#footer">Footer</a>
+            </li>
+          </ul>
 
-        <a href="#contact_me">Contact me</a>
-        <a href="#footer">Footer</a>
-      </header>
+
+
+      </nav>
+    </header>
       <hr />
       <main style="background-color: cornflowerblue" id="home">
         <h1>Ahmed Ouda</h1>
@@ -87,11 +101,12 @@
           <input type="email" id="email" />
         </div>
         <br />
-        <div>
+<!-- this is comment -->
+        <!-- <div>
           <label for="message">Message</label>
           <br />
           <textarea name="" id="message" cols="30" rows="10"></textarea>
-        </div>
+        </div> -->
         <br />
         <div>
           <button>Send</button>
